--- a/Html/kadrovoe_peremeshenie.html
+++ b/Html/kadrovoe_peremeshenie.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <header>
-        <a href="../Html/Index.html"><img src="../img/Logo.png" alt="Кадровый учет" class="img_logo"></a>
+        <a href="../Index.html"><img src="../img/Logo.png" alt="Кадровый учет" class="img_logo"></a>
 
         <ul class="menu">
             <li>
-            <a href="../Html/Index.html">Главная</a>
+            <a href="../Index.html">Главная</a>
             </li>
             <li>
                 <select name="navigation" id="pageSelect" onclick="navigateToPage(this.value)">
