--- a/Index.html
+++ b/Index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Кадровый учет</title>
-    <link rel="stylesheet" href="Css/Style.css">
-    <link rel="stylesheet" href="Css/registration.css">
+    <link rel="stylesheet" href="/Css/Style.css">
+    <link rel="stylesheet" href="/Css/registration.css">
 </head>
 <body>
     
     <header>
-        <a href="Html/Index.html"><img src="img/Logo.png" alt="Кадровый учет" class="img_logo"></a>
+        <a href="/Index.html"><img src="/img/Logo.png" alt="Кадровый учет" class="img_logo"></a>
 
         <ul class="menu">
             <li>
-            <a href="Html/Index.html">Главная</a>
+            <a href="/Index.html">Главная</a>
             </li>
             <li>
                 <select name="navigation" id="pageSelect" onclick="navigateToPage(this.value)">
@@ -24,10 +24,10 @@
                 </select>
             </li>
             <li>
-                <a href="Html/kadrovoe_peremeshenie.html">Кадровое перемещения</a>
+                <a href="/Html/kadrovoe_peremeshenie.html">Кадровое перемещения</a>
             </li>
             <li>
-                <a href="Html/Otpuska_bolnichnie.html">Отпуска-больничные</a>
+                <a href="/Html/Otpuska_bolnichnie.html">Отпуска-больничные</a>
             </li>
 
         </ul>
@@ -335,6 +335,6 @@
         </div>
     </div>
 </div>
-    <script src="JS/script.js"></script>
+    <script src="/JS/script.js"></script>
 </body>
 </html>
